<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="userViewModel"
                type="com.company1.gpasaver.ui.home.UserViewModel"/>
    </data>


    <RelativeLayout
            android:id="@+id/item_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{userViewModel::onItemClick}"
            android:padding="@dimen/spacing_large">


        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_people"
                android:layout_width="80dp"
                android:layout_height="80dp"
                tools:imageUrl="@{userViewModel.pictureProfile}"/>


        <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_people"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_toEndOf="@+id/image_people"
                android:text="@{userViewModel.fullName}"
                android:textColor="@android:color/primary_text_light"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Jon Snow"/>

        <TextView
                android:id="@+id/label_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/label_name"
                android:layout_below="@+id/label_name"
                android:text="@{userViewModel.phoneNumber}"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                tools:text="555-256-1473"/>

        <TextView
                android:id="@+id/gpa_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_name"
                android:layout_alignStart="@+id/label_name"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="57dp"
                android:text="@{userViewModel.phoneNumber}"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                tools:text="555-256-1473" />

        <TextView
                android:id="@+id/class_tut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_name"
                android:layout_alignStart="@+id/label_name"
                android:layout_marginStart="-2dp"
                android:layout_marginTop="39dp"
                android:text="@{userViewModel.phoneNumber}"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                tools:text="555-256-1473" />

        <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_name"
                android:layout_alignStart="@+id/label_name"
                android:layout_marginStart="-3dp"
                android:layout_marginTop="75dp"
                android:text="@{userViewModel.phoneNumber}"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                tools:text="555-256-1473" />

        <TextView
                android:id="@+id/label_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/label_phone"
                android:layout_below="@+id/label_phone"
                android:text="@{userViewModel.mail}"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                tools:text="jonsnow@example.com"/>

    </RelativeLayout>


</layout>