...
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay" />


  <ListView
      android:id="@+id/listview"
      android:layout_width="407dp"
      android:layout_height="483dp"
      android:layout_marginTop="44dp"
      android:layout_marginEnd="1dp"
      android:visibility="visible"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/listview"
      app:layout_constraintVertical_bias="0.0" />

  <com.beardedhen.androidbootstrap.BootstrapButton
      android:id="@+id/btnRefresh"
      android:layout_width="wrap_content"
      android:layout_height="39dp"
      android:layout_margin="5dp"

      android:layout_marginStart="304dp"
      android:layout_marginTop="60dp"

      android:layout_marginEnd="16dp"
      android:layout_marginBottom="112dp"
      android:background="#f05924"
      android:text="Refresh"
      android:textColor="@android:color/white"
      app:bootstrapBrand="success"
      app:bootstrapSize="lg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
...
